# everyday-cwe

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
src/: main.rs
static/: index.css  xml_to_json.ipynb
templates/: index.html.hbs
templates/components/: layout.html.hbs
