[package]
name = "everyday-cwe"
version = "0.1.0"
authors = ["Trash list"]
edition = "2024"

[dependencies]
handlebars-fluent = "0.4.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
